# BahaM2

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/control/: control_test.cpp
apps/example_eigen/: example_eigen.cpp
apps/kinematic_test/: kinematic_test.cpp
apps/trajectory_test/: trajectory_test.cpp
share/: _Panda_visualizer.ttt
src/: CMakeLists.txt
src/control/: control.cpp
src/kinematic_model/: kinematic_model.cpp
src/trajectory_generation/: seance 2.cpp  trajectory_generation.cpp
